# knightbot

./: .gitignore  .tmuxinator.yml  README.md  gitsetup.txt  ros.h  session.yml  start.sh
CanCollector/: CanCollector.ino  Communication.ino  Config.h  Motors.ino  doc.txt
CubeCollector/: Config.h  CubeCollector.ino
DisplayController/: Communication.ino  Config.h  DisplayController.ino  doc.txt
DisplayController/Arduino LCD/LCD12864R/: LCD12864R.cpp  LCD12864R.h
DisplayController/Arduino LCD/hello/: hello.ino
MainController/: Config.h  MainController.ino  Makefile  lib  old_junk.txt  rosserial_example.ino  serial_setup.txt  utils.ino
MainController/build-mega2560/: MainController.elf  MainController.hex  MainController.ino.d
MainController/build-mega2560/userlibs/ros_lib/: duration.cpp.d  time.cpp.d
MotorController/: Communication.ino  Config.h  MotorController.ino  Moves.ino
brick_picker/: Makefile  brick_picker.ino
libraries/ros_lib/find_object_2d/: DetectionInfo.h
new_main/: Config.h  new_main.ino
our_workspace/.catkin_tools/profiles/default/: config.yaml
our_workspace/devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
our_workspace/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
our_workspace/devel/.private/master_node/: .catkin  .rosinstall  setup.sh
our_workspace/devel/.private/robot_setup_tf/: .catkin  .rosinstall  setup.sh
our_workspace/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  master_node.pc  robot_setup_tf.pc
our_workspace/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
our_workspace/devel/share/master_node/cmake/: master_nodeConfig-version.cmake  master_nodeConfig.cmake
our_workspace/src/master_node/: CMakeLists.txt  comunication_protocol.txt  package.xml
our_workspace/src/master_node/launch/: frames.gv  main.launch  transform.launch
our_workspace/src/master_node/rviz/: detection_bag.rviz
our_workspace/src/master_node/src/: main.cpp
our_workspace/src/master_node/srv/: arduino_srv.srv  buttons.srv
our_workspace/src/robot_setup_tf/: CMakeLists.txt
our_workspace/src/robot_setup_tf/src/: tf_broadcaster.cpp  tf_listener.cpp
workspace/: README.md
workspace/devel/: .catkin  .rosinstall  setup.sh
workspace/devel/include/find_object_2d/: DetectionInfo.h  ObjectsStamped.h
workspace/devel/include/master_node/: motors.h  motorsRequest.h  motorsResponse.h
workspace/devel/include/realsense2_camera/: Extrinsics.h  IMUInfo.h
workspace/devel/lib/find_object_2d/: find_object_2d  print_objects_detected  tf_example
workspace/devel/lib/master_node/: main
workspace/devel/lib/orb_slam2_ros/: orb_slam2_ros_mono  orb_slam2_ros_rgbd  orb_slam2_ros_stereo
workspace/devel/lib/pkgconfig/: ddynamic_reconfigure.pc  find_object_2d.pc  librealsense.pc  master_node.pc  orb_slam2_ros.pc  realsense2_camera.pc
workspace/src/: realsense
workspace/src/master_node/: CMakeLists.txt  comunication_protocol.txt  nodelet_plugins.xml  package.xml
workspace/src/master_node/rviz/: detection_live.rviz
workspace/src/master_node/src/: main.cpp
workspace/src/robot_setup_tf/src/: .tf_broadcaster.cpp.swp  tf_broadcaster.cpp
(+32 files in other folders)
