<?xml version="1.0"?>
<package>
  <name>master_node</name>
  <version>0.1.0</version>
  <description>Node controling the whole world</description>

  <maintainer email="novotal8@fel.cvut.cz">ales</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>nodelet</build_depend>
	<build_depend>std_msgs</build_depend>

<!--     <build_depend>message_runtime</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>message_generation</build_depend>
-->

    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>pcl_conversions</run_depend>
    <run_depend>nodelet</run_depend>
	<run_depend>std_msgs</run_depend>
<!--  
    <run_depend>message_runtime</run_depend>
    <run_depend>std_srvs</run_depend>
    <run_depend>message_generation</run_depend>
-->

  <!-- The export tag contains other, unspecified, tags -->
  <!-- The export tag contains other, unspecified, tags -->
  <export>
   <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
