<?xml version="1.0"?>
<package>
  <name>master_node</name>
  <version>0.0.0</version>
  <description>The master_node package</description>

  <maintainer email="novotal8@todo.todo">novotal8</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>


  <export>
  </export>
</package>
